      * Added WebPage.release() to free the web page from memory (issue 154)
      * Added special handling of about:blank (issue 235)
      * Made a separate network access manager for each page (issue 190)

    New features

      * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
      * Added support for persistent cookies (issue 91)
      * Added page scroll position (issue 162)
      * Added basic HTTP authentication support (issue 45)
      * Added callback for page initialization (issue 143)
      * Added support to specify script and output encoding (issue 186)
      * Added option to allow local content to do cross-domain access (issue 28)
      * Added support to apply configurations from a JSON file (issue 180)
      * Added a convenient WebPage initialization construction (issue 206)
      * Added option to limit the size of disk cache (issue 220)

    Examples

      * Added a new example on using Modernizr to detect features (issue 144)
      * Fixed pizza.js example to use Mobile Yelp (issue 200)
      * Added an example to show live network traffic (issue 227)

2011-06-21: Version 1.2.0 "Birds of Paradise"

    Version 1.2.0 is a major update. It introduces a whole set of new API.

    Bug fixes

      * Fixed rendering a very large web page (issue 54)
      * Fixed reporting of CoffeeScript compile error (issue 125)

    New features

      * Added callback for console message (issue 12)
      * Improved security model via WebPage object (issue 41)
      * Added support for POST, HEAD, PUT, and DELETE (issue 88)
      * Scripts filename is now passed as phantom.scriptName
      * Added callback to capture resource requests and responses (issue 2)
      * Added the ability to load external JavaScript (issue 32)

    Examples

      * Ported examples to use WebPage object
      * Added a new example to upload an image to imagebin.org
      * Added a new example to show HTTP POST feature